# sistema-de-moeda-estudantil

./: README.md
codigo/backend/: .env.sample  Dockerfile  README.md  compose.yaml  pyproject.toml
codigo/backend/app/: main.py
codigo/backend/app/alembic/versions/: 09c9f2041718_tabela_users_adicionada.py  294c91e63a6e_tabela_users_adicionada.py  71e3ca21074b_moedas_added.py  7c8670408ac4_moedas_added.py  90f05c737fee_create_aluno_s_table.py
codigo/backend/app/core/: config.py  db.py  deps.py
codigo/backend/app/crud/: __init__.py  crud_aluno.py  crud_empresa.py  crud_professor.py  crud_user.py
codigo/backend/app/models/: __init__.py  aluno.py  empresa.py  professor.py  user.py
codigo/backend/app/schemas/: __init__.py  aluno.py  empresa.py  professor.py  user.py
codigo/backend/backend/: main.py  pydantic_models.py
codigo/backend/backend/controllers/: aluno_controller.py
codigo/backend/backend/database/: crud.py  database.py  models.py
codigo/backend/backend/model/: aluno.py  instituicao.py  user.py
codigo/backend/models/: aluno.py
codigo/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
codigo/frontend/src/: App.tsx  main.tsx
codigo/frontend/src/components/: Modal.jsx  Navbar.jsx  Table.jsx
codigo/frontend/src/context/: AuthContext.tsx
codigo/frontend/src/pages/: CadastroAluno.tsx  DashboardAluno.tsx  Home.tsx  Login.tsx  Register.tsx  Transactions.tsx
documentacao/diagramas/: DiagramadeImplantacao-moedainfantil.asta  diagrama-caso-de-uso.asta  diagrama-de-componentes.drawio
(+8 files in other folders)
