[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marcusvco <marcuscarvalhodeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
